test/spec_vectors/i64/fail/module_13.wat
(module (func (result i64) (i64.shr_u (i32.const 0) (f32.const 0))))